testData/resolve/label/highlightResolvingInMultipleFiles.s
myLabel
  bra myLabel

  bra <error descr="Cannot resolve symbol 'INVALID_LABEL'">INVALID_LABEL</error>

* highlightResolvingInMultipleFiles_other.s
  bra otherLabel
  bra otherLabel2